[package]
name = "glide-cli"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/ngpal/glide-cli.git"

[dependencies]
regex = "1.11.1"
tokio = { version = "1.42.0", features = ["full"] }
utils = { git = "https://github.com/ngpal/glide-utils-rs.git"}

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
